--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,6 +17,7 @@
     <script src="js/Login.js"></script>
     <script src="js/HostTab.js"></script>
     <script src="js/VmTab.js"></script>
+    <script src="js/VirtualDisksTab.js"></script>
     <script src="js/VmRow.js"></script>
     <script src="js/VersionInfo.js"></script>
     <script src="js/NewHostWizard.js"></script>
