--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
     <script src="js/socket.js"></script>
+    <script src="js/SizeUtil.js"></script>
     <script src="js/Session.js"></script>
     <script src="js/Login.js"></script>
     <script src="js/HostTab.js"></script>
@@ -24,6 +25,7 @@
     <script src="js/NewVmWizard.js"></script>
     <script src="js/HostDetails.js"></script>
     <script src="js/MainTabs.js"></script>
+    <script src="js/ExpectationMini.js"></script>
     <link href="webjars/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="css/kerub.css" rel="stylesheet"/>
     <link rel="icon" href="img/kerub.ico" type="image/png"/>
