--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -5,7 +5,7 @@
                 <i class="glyphicon glyphicon-cog"></i>Virtual machines
             </tab-heading>
             <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVmForm()">New VM</button>
-            <table class="table table-striped">
+            <table class="table table-striped table-hover">
                 <thead>
                 <tr>
                     <td>name</td>
@@ -53,7 +53,7 @@
                 <i class="glyphicon glyphicon-hdd"></i>Virtual disks
             </tab-heading>
             <button type="button" class="btn btn-default glyphicon glyphicon-plus">New Disk</button>
-            <table class="table">
+            <table class="table table-striped table-hover">
                 <thead>
                 <tr>
                     <td>size</td>
