disabled empty tabs
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -42,7 +42,7 @@
                 </tbody>
             </table>
         </tab>
-        <tab>
+        <tab disabled="true">
             <tab-heading>
                 <i class="glyphicon glyphicon-cloud"></i>Virtual networks
             </tab-heading>
@@ -125,7 +125,7 @@
                 <li><a href="#">&raquo;</a></li>
             </ul>
         </tab>
-        <tab heading="Storage">
+        <tab heading="Storage" disabled="true">
         </tab>
         <tab ng-controller="VersionInfo">
             <tab-heading>
