--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -52,7 +52,7 @@
             <tab-heading>
                 <i class="glyphicon glyphicon-hdd"></i>Virtual disks
             </tab-heading>
-            <button type="button" class="btn btn-default glyphicon glyphicon-plus">New Disk</button>
+            <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVirtualDisk()">New Disk</button>
             <table class="table table-striped table-hover">
                 <thead>
                 <tr>
