--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -84,6 +84,12 @@
                 </div>
                 <div class="panel panel-info">
                     <div class="panel-heading">
+                        <h3 class="panel-title"><span class="glyphicon glyphicon-tag"/> name</h3>
+                    </div>
+                    <input ng-model="disk.name" class="form-control">
+                </div>
+                <div class="panel panel-info">
+                    <div class="panel-heading">
                         <h3 class="panel-title"><span class="glyphicon glyphicon-scale"/> Size</h3>
                     </div>
                     <input ng-model="disk.size" class="form-control" autofocus>
