mini-fix: dedicated -> dedicate
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -186,7 +186,7 @@
             </div>
         </div>
         <div class="panel panel-info">
-            <div class="panel-heading"><span class="glyphicon glyphicon-heart"></span> Dedicated</div>
+            <div class="panel-heading"><span class="glyphicon glyphicon-heart"></span> Dedicate</div>
             <div class="panel-body">
                 <span ng-if="host.dedicated">
                     <span class="glyphicon glyphicon-star"></span> Host is dedicated, all resources can be used by Kerub
