storage size set to biginteger
Bug-Url: https://github.com/K0zka/kerub/issues/88
Bug-Url: https://github.com/K0zka/kerub/issues/23
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -20,7 +20,7 @@
                     <tr ng-repeat="_vm in vms" ng-controller="VmRow" ng-init="init(_vm)">
                         <td>{{vm.name}}</td>
                         <td>{{vm.nrOfCpus}}</td>
-                        <td>{{humanFriendlySize(vm.memoryMb.min * 1024 * 1024)}} - {{humanFriendlySize(vm.memoryMb.max * 1024 * 1024)}}</td>
+                        <td>{{humanFriendlySize(vm.memory.min)}} - {{humanFriendlySize(vm.memory.max)}}</td>
                         <td>{{vmdyn.load()}}</td>
                         <td>
                             <span ng-repeat="expectation in _vm.expectations"
