--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -138,8 +138,8 @@
                     <div class="panel-heading">
                         <h3 class="panel-title"><span class="glyphicon glyphicon-signal"/> Memory</h3>
                     </div>
-                    <input ng-model="vm.memoryMb.min" class="form-control" type="number">
-                    <input ng-model="vm.memoryMb.max" class="form-control" type="number">
+                    <input ng-model="vm.memory.min" class="form-control" type="number">
+                    <input ng-model="vm.memory.max" class="form-control" type="number">
                 </div>
             </tab>
             <tab>
