--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -2,7 +2,7 @@
     <tabset>
         <tab ng-controller="VmTab">
             <tab-heading>
-                <i class="glyphicon glyphicon-cog"></i>Virtual machines
+                <i class="fa fa-cubes"></i>Virtual machines
             </tab-heading>
             <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVmForm()">New VM</button>
             <table class="table table-striped table-hover">
@@ -44,7 +44,7 @@
         </tab>
         <tab disabled="true">
             <tab-heading>
-                <i class="glyphicon glyphicon-cloud"></i>Virtual networks
+                <i class="fa fa-sitemap"></i>Virtual networks
             </tab-heading>
 
         </tab>
@@ -89,7 +89,7 @@
         </tab>
         <tab ng-controller="HostTab">
             <tab-heading>
-                <i class="glyphicon glyphicon-wrench"></i>Hosts
+                <i class="fa fa-server"></i>Hosts
             </tab-heading>
             <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newHostForm()">New Host</button>
             <table class="table table-striped table-hover">
@@ -107,17 +107,21 @@
                     <td>N/A</td>
                     <td>{{host.dedicated}}</td>
                     <td><span ng-if="host.capabilities.distribution" class="label label-primary">
+                                <i class="fa fa-linux"></i>
                                 {{host.capabilities.distribution.name}}
                                 {{host.capabilities.distribution.version.major}}
                                 {{host.capabilities.distribution.version.minor}}
                                 </span>
                                 <span ng-if="host.capabilities.system.manufacturer" class="label label-default">
+                                <i class="fa fa-industry"></i>
                                 {{host.capabilities.system.manufacturer}}
                                 </span>
                                 <span ng-if="host.capabilities.cpuArchitecture" class="label label-info">
+                                <i class="fa fa-gear"></i>
                                 {{host.capabilities.cpuArchitecture}}
                                 </span>
                                 <span ng-if="host.capabilities.cpuArchitecture" class="label label-success">
+                                <i class="fa fa-reorder"></i>
                                 {{host.capabilities.totalMemory / (1024 * 1024) | number : 2}} GB
                                 </span>
                     </td>
@@ -129,7 +133,10 @@
                 <li><a href="#">&raquo;</a></li>
             </ul>
         </tab>
-        <tab heading="Storage" disabled="true">
+        <tab disabled="true">
+            <tab-heading>
+                <i class="fa fa-database"></i>Storage
+            </tab-heading>
         </tab>
         <tab ng-controller="VersionInfo">
             <tab-heading>
