cleanup: organize import over the whole source code
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:ng="http://angularjs.org" ng-app="kerubApp">
+<html ng-app="kerubApp">
 <head ng-app="kerubApp">
     <meta charset="UTF-8">
     <title>kerub</title>
