human-friendly input for new vm memory size
Bug-Url: https://github.com/kerubistan/kerub/issues/82
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -153,8 +153,8 @@
                     <div class="panel-heading">
                         <h3 class="panel-title"><span class="glyphicon glyphicon-signal"/> Memory</h3>
                     </div>
-                    <input ng-model="vm.memory.min" class="form-control" type="number">
-                    <input ng-model="vm.memory.max" class="form-control" type="number">
+                    <input ng-model="vm.memory.humanFriendlyMin" ng-model-options="{ getterSetter: true }" class="form-control">
+                    <input ng-model="vm.memory.humanFriendlyMax" ng-model-options="{ getterSetter: true }" class="form-control">
                 </div>
             </tab>
             <tab>
