--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -370,7 +370,7 @@
             <table class="table table-condensed">
                 <tr ng-repeat="software in host.capabilities.installedSoftware">
                     <td>{{software.name}}</td>
-                    <td>{{software.version.major}}<span ng-if="software.version.minor">.{{software.version.minor}}</span><span ng-if="software.version.build">.{{software.version.build}}</span></td>
+                    <td>{{software.ver.major}}<span ng-if="software.ver.minor">.{{software.ver.minor}}</span><span ng-if="software.ver.build">.{{software.ver.build}}</span></td>
                 </tr>
             </table>
         </form>
