View lvm PVs in storage details
Bug-Url: https://github.com/kerubistan/kerub/issues/24
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -420,7 +420,12 @@
                         <td>{{humanFriendlySize(cap.size)}}</td>
                         <td>
                             <span ng-if="cap['@type'] === 'lvm'">
+                                {{cap.physicalVolumes.length}}
                                 <span class="label label-default"><span class="fa fa-linux"></span> lvm</span>
+                                <span ng-repeat="pv in cap.physicalVolumes track by $index" class="label label-info">
+                                    <span class="fa fa-hdd-o"></span> {{humanFriendlySize(pv)}}
+                                </span>
+
                             </span>
                         </td>
                     </tr>
