Display host join errors
Bug-Url: https://github.com/kerubistan/kerub/issues/40
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -91,7 +91,7 @@
             <tab-heading>
                 <i class="fa fa-server"></i>Hosts
             </tab-heading>
-            <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newHostForm()">New Host</button>
+            <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newHostForm()">Join Host</button>
             <table class="table table-striped table-hover">
                 <thead>
                 <tr>
