--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -202,6 +202,7 @@
                                        placeholder="Type disk name"
                                        autocomplete="off"
                                        typeahead-template-url="DiskSelection.html"
+                                       typeahead-min-length="3"
                                        typeahead-wait-ms="200"
                                         />
                                 <i ng-show="loadingDisks" class="glyphicon glyphicon-refresh form-control-feedback"></i>
