Some bit from the message delivery infrastructure
Bug-Url: https://github.com/kerubistan/kerub/issues/86
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -381,6 +381,12 @@
             </span>
         </form>
         <form ng-show="isVisible('CPU')">
+
+            <div class="form-group">
+                <label>load</label>
+                {{dyn}}
+            </div>
+
             <div class="form-group">
                 <label>total</label>
                 <input class="form-control" ng-value="nrOfCpus" disabled>
