--- a/src/main/webapp/MainTabs.html
+++ b/src/main/webapp/MainTabs.html
@@ -2,7 +2,7 @@
     <tabset>
         <tab ng-controller="VmTab">
             <tab-heading>
-                <i class="fa fa-cubes"></i>Virtual machines
+                <i class="fa fa-cubes"></i> VMs
             </tab-heading>
             <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVmForm()">New VM</button>
             <table class="table table-striped table-hover">
@@ -52,13 +52,13 @@
         </tab>
         <tab disabled="true">
             <tab-heading>
-                <i class="fa fa-sitemap"></i>Virtual networks
+                <i class="fa fa-sitemap"></i> Virtual networks
             </tab-heading>
 
         </tab>
         <tab ng-controller="VirtualDisksTab">
             <tab-heading>
-                <i class="glyphicon glyphicon-hdd"></i>Virtual disks
+                <i class="glyphicon glyphicon-hdd"></i> Virtual disks
             </tab-heading>
             <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newVirtualDisk()">New Disk</button>
             <table class="table table-striped table-hover">
@@ -97,7 +97,7 @@
         </tab>
         <tab ng-controller="HostTab">
             <tab-heading>
-                <i class="fa fa-server"></i>Hosts
+                <i class="fa fa-server"></i> Hosts
             </tab-heading>
             <button type="button" class="btn btn-default glyphicon glyphicon-plus" ng-click="newHostForm()">Join Host</button>
             <table class="table table-striped table-hover">
@@ -143,12 +143,12 @@
         </tab>
         <tab disabled="true">
             <tab-heading>
-                <i class="fa fa-database"></i>Storage
+                <i class="fa fa-database"></i> Storage
             </tab-heading>
         </tab>
         <tab ng-controller="VersionInfo">
             <tab-heading>
-                <i class="glyphicon glyphicon-info-sign"></i>About
+                <i class="glyphicon glyphicon-info-sign"></i> About
             </tab-heading>
             <div class="versioninfobox">
                 <img src="img/kerub.png"><br>
