Show host status in the details dialog
Bug-Url: https://github.com/kerubistan/kerub/issues/107
Signed-off-by: Laszlo Hornyak <laszlo.hornyak@gmail.com>

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -334,7 +334,7 @@
     </script>
     <script type="text/ng-template" id="HostDetails.html">
         <div class="modal-header">
-            <h3 class="modal-title">Host Details - {{host.address}}</h3>
+            <h3 class="modal-title"><span ng-class="iconByStatus()"></span> Host Details - {{host.address}}</h3>
         </div>
         <ul class="nav nav-tabs">
             <li role="presentation" ng-class="isActive('overview')" ng-click="selectView('overview')"><a href="#">Overview</a></li>
@@ -384,7 +384,6 @@
 
             <div class="form-group">
                 <label>load</label>
-                {{dyn}}
             </div>
 
             <div class="form-group">
